tests/NormalTests/paczka1/small_fuzzy/80364455.err
Error in line 2: A180 A180 51,29
Error in line 4: I1dNWO A112 8,5
Error in line 11: A180 A180 177,0
